--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
-
+<header class="container-fluid mainHeader">
+    <div class="row">
+        <div class="container headerContent">
+            <div class="row">
+                    <div class="thumbnail">
+                        <div class="caption">
+                            <h3>Drink smart, live better.</h3>
+                            <p>Because you don't have time for a rough morning.</p>
+                            <p><a href="#" class="btn btn-primary" role="button">get flyby</a></p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+</header>
 </body>
 </html>
