--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
@@ -22,5 +23,22 @@
         </div>
     </div>
 </header>
+<div class="ad container">
+    <div class="row">
+        <div class="col-md-7 col-xs-12">
+            <iframe src="https://player.vimeo.com/video/199258009" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        <div class="col-md-5 col-xs-12">
+            <hr>
+            <div class="thumbnail">
+                <div class="caption">
+                    <h3>The secret to drinking right.</h3>
+                    <p>Flyby is formulated to boost your body’s natural response to alcohol, so you eliminate harmful toxins and wake up feeling great. <span><i class="fa fa-star fa-1x" aria-hidden="true"></i>1</span></p>
+                    <p><a href="" class="btn" role="button">how it works<i class="fa fa-long-arrow-right fa-6"></i></a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
